--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 	<body>
 		<div class="container">
 			<h1 class="my-5">Sum of 2 Numbers</h1>
-			<form method="POST" action="add.jsp">
+			<form method="GET" action="add.jsp">
 				<div class="input-group mb-3">
 					<span class="input-group-text" id="basic-addon1">Input 1</span>
-					<input type="number" class="form-control" name="a" />
+					<input type="number" class="form-control" name="a" id="imput1" />
 				</div>
 				<div class="input-group mb-3">
 					<span class="input-group-text" id="basic-addon1">Input 2</span>
-					<input type="number" class="form-control" name="b" />
+					<input type="number" class="form-control" name="b" id="imput2" />
 				</div>
 				<button type="submit" class="btn btn-primary mb-3">Add</button>
 			</form>
