Allow entering text in the input

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 			<form method="GET" action="add.jsp">
 				<div class="input-group mb-3">
 					<span class="input-group-text" id="basic-addon1">Input 1</span>
-					<input type="number" class="form-control" name="a" id="imput1" />
+					<input type="text" class="form-control" name="a" id="imput1" />
 				</div>
 				<div class="input-group mb-3">
 					<span class="input-group-text" id="basic-addon1">Input 2</span>
-					<input type="number" class="form-control" name="b" id="imput2" />
+					<input type="text" class="form-control" name="b" id="imput2" />
 				</div>
 				<button type="submit" class="btn btn-primary mb-3">Add</button>
 			</form>
