Heavy Refactoring. 2-spring-boot-web added.

--- a/1-jsp-html/index.html
+++ b/1-jsp-html/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class="container">
 			<h1 class="my-5">Sum of 2 Numbers</h1>
-			<form method="GET" action="add.jsp">
+			<form method="POST" action="add.jsp">
 				<div class="input-group mb-3">
 					<span class="input-group-text" id="basic-addon1">Input 1</span>
 					<input type="text" class="form-control" name="a" id="imput1" />
